src/sass/components/_model.scss
.model-page {
  display: flex;
  flex-direction: column;
  align-items: center;
  .title-container {
    flex-grow: 1;
    margin: 0 auto;
    margin-bottom: 10px;
    padding: 0 32px;
    position: relative;
    width: auto;
    height: calc(60vh - $navbar-height);
    display: grid;
    grid-template-rows: 1fr 28px 1.5fr;
    grid-template-columns: minmax(0, 1fr) minmax(0, max-content) minmax(0, 1fr);
    align-items: top;
    justify-content: space-evenly;
    .title-info-container {
      padding: 0 10px;
      display: flex;
      align-items: center;
      justify-content: space-between;
      grid-column: 2;
      grid-row: 2;
      .location {
        :nth-child(2) {
          margin-left: 28px;
        }
      }
      .instagram {
      }
    }
    .name-container {
      grid-row: 3;
      grid-column: 2;
      display: flex;
      align-items: center;
      justify-content: center;
      .first-name {
        margin-right: 72px;
      }
      span {
        display: inline-block;
        position: relative;
        font-weight: 400;
        font-size: 10vw;
        font-family: "Maragsa";
      }
    }
  }
  .big-image-wrapper {
    position: relative;
    display: flex;
    justify-content: center;
    img {
      position: absolute;
      width: 100%;
    }
  }
  .model-info-wrapper {
    margin: 1rem 0;
    .model-info-container {
      display: flex;
      flex-direction: column;
      align-items: center;
      margin: 0 15%;
      .paragraph-container {
        display: grid;
        grid-template-columns: 1fr 1.5fr;
        .h2-wrapper {
          padding: 1rem;
          display: flex;
          justify-content: left;
          grid-column: 1;
          h2 {
          }
        }
        .p-wrapper {
          padding: 1rem;
          grid-column: 2;
          @media (max-width: 768px) {
            grid-column: 1 / 3;
          }
          p {
            text-align: justify;
            line-height: 28px;
            font-weight: 400;
          }
        }
      }
      .model-details {
        width: 100%;
        display: flex;
        flex-direction: column;
        @media (max-width: 768px) {
          width: 100%;
        }
        .info-row {
          display: grid;
          grid-template-columns: 1fr 3fr 1fr;
          justify-content: space-between;
          align-items: center;
          margin: 0.5rem 0;
          padding: 0 10px;
          font-size: 1.5rem;
          .info-label {
            display: flex;
            justify-content: left;
            grid-column: 1;
          }
          .info-value {
            grid-column: 3;
            display: flex;
            justify-content: right;
            align-items: center;
          }
        }
      }
    }
  }
}

